[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_ess_epm"
description = "Complementary package to the ts_ess_common package for reading telemetries from devices for electric power management."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-ess-epm.lsst.io", source_code = "https://github.com/lsst-ts/ts_ess_epm" }
dynamic = ["version"]
dependencies = ["pymodbus"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
